--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.16.2",
     "fastapi[standard]>=0.115.13",
     "python-dotenv>=1.1.0",
+    "tortoise-orm[asyncmy]>=0.25.1",
 ]
 
 [dependency-groups]
