--- a/devops/supervisor.conf
+++ b/devops/supervisor.conf
@@ -1,6 +1,6 @@
 [program:fastapi-template]
 directory=/data/apps/fastapi-template
-command=uvicorn app:app --host 0.0.0.0 --port 8000
+command=uvicorn app.main:app --host 0.0.0.0 --port 8000
 autostart=true
 autorestart=true
 stopasgroup=true
