--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ dependencies = [
     "opentelemetry-api>=1.34.1",
     "opentelemetry-exporter-otlp>=1.34.1",
     "opentelemetry-instrumentation-fastapi>=0.55b1",
+    "opentelemetry-instrumentation-redis>=0.55b1",
     "opentelemetry-instrumentation-tortoiseorm>=0.55b1",
     "opentelemetry-sdk>=1.34.1",
     "python-dotenv>=1.1.0",
+    "redis[hiredis]>=6.2.0",
     "tortoise-orm[asyncmy]>=0.25.1",
 ]
 
