--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,13 @@
-.venv
-.vscode
 .env
-
 logs
 
-__pycache__
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
