--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.3",
     "fastapi[standard]>=0.115.13",
     "opentelemetry-api>=1.34.1",
     "opentelemetry-exporter-otlp>=1.34.1",
     "opentelemetry-instrumentation-fastapi>=0.55b1",
     "opentelemetry-instrumentation-redis>=0.55b1",
     "opentelemetry-instrumentation-tortoiseorm>=0.55b1",
+    "opentelemetry-processor-baggage>=0.60b1",
     "opentelemetry-sdk>=1.34.1",
     "python-dotenv>=1.1.0",
     "redis[hiredis]>=6.2.0",
